--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="is">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hafa Samband</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sneyti</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
     <nav>
@@ -22,7 +24,7 @@
             <li><a href="contact.html">Hafðu Samband</a></li>
         </ul>
     </nav>
-
+    <header></header>
     <div class="container">
         <h1>Hafa Samband</h1>
         <form action="submit-form.php" method="POST">
