--- a/about.html
+++ b/about.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sneyti</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="script.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sneyti</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
-  <nav>
-    <ul>
-        <li><a href="index.html">Heim</a></li>
-        <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Reiknivél</a>
-            <div class="dropdown-content">
-                <a href="verd.html">Reikna verð</a>
-                <a href="km.html">Reikna KM</a>
-                <a href="bensinverd.html">Bensínverð.is</a>
-            </div>
-        </li>
-        <li><a href="about.html">Um Okkur</a></li>
-        <li><a href="contact.html">Hafðu Samband</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Heim</a></li>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Reiknivél</a>
+                <div class="dropdown-content">
+                    <a href="verd.html">Reikna verð</a>
+                    <a href="km.html">Reikna KM</a>
+                    <a href="bensinverd.html">Bensínverð.is</a>
+                </div>
+            </li>
+            <li><a href="about.html">Um Okkur</a></li>
+            <li><a href="contact.html">Hafðu Samband</a></li>
+        </ul>
+    </nav>
+    <header></header>
     <div class="container">
         <h1>About Us</h1>
         <h3 class="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus scelerisque urna sit amet consectetur auctor. Nunc quis augue eu elit tristique ultrices. Sed aliquet in massa eget dapibus. Donec id nunc a mauris tempor pretium a nec sem. Ut congue odio eu dictum pulvinar. Cras egestas blandit bibendum. Proin egestas nec orci ac vehicula. Nunc dui sem, vulputate et tincidunt in, ullamcorper vitae nunc. Nullam eget condimentum lectus. Nullam volutpat, tortor sed tempor varius, orci nibh dictum magna, a euismod quam est ac lacus. Quisque ex velit, pharetra et purus at, hendrerit vehicula risus. Aenean vestibulum leo nunc, a tincidunt ipsum sollicitudin sit amet. Aliquam pretium lectus non lectus aliquet, lacinia bibendum magna feugiat. Donec malesuada, justo eleifend tristique sodales, erat quam accumsan arcu, eleifend blandit ex justo maximus nulla.
