--- a/km.html
+++ b/km.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sneyti</title>
-<link rel="stylesheet" href="style.css" />
-<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
@@ -24,9 +24,8 @@
             <li><a href="contact.html">Hafðu Samband</a></li>
         </ul>
     </nav>
-<header>
-</header>
-<div class="container">
+    <header></header>
+    <div class="container">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <h1>Sneyti (Reikna KM)</h1>
 <div class="input-group">
