--- a/vegalend.html
+++ b/vegalend.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sneyti</title>
-<link rel="stylesheet" href="style.css" />
-<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <body>
@@ -24,8 +24,7 @@
             <li><a href="contact.html">Hafðu Samband</a></li>
         </ul>
     </nav>
-<header>
-</header>
+    <header></header>    
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgCcRh-y_IJXVvTOkMcwXjkGZLvL9Oo6I&libraries=places"></script>
     <div class="container">
         <h1>Sneyti (Reikna Vegalengd)</h1>
